@@ -27,7 +27,7 @@ public:
       iPvId(iPvId1), iDbrType(iDbrType1), iNumElements(iNumElements1)
     {}
     
-    int printPv();
+    int printPv() const;
 
     static void* operator new(size_t size, char* p)     { return p; }
     // Disable ordinary (non-placement) new: only placement new and memory mapped objects are allowed
