@@ -1,3 +1,4 @@
+2009-Sep14      tomytsai    Add Epics data parsing in app/xtcreader.cc
 2009-Aug27      tomytsai    Add 1. epics xtc data reading library under pdsdata/epics 2. xtc reader sample program in pdsdata/app and change xtc typeid changes for epics and bld data
 2009-Aug24      cpo                     Add Matt's BldInfo classes and put it TypeId for the FEE GasDet.
 		weaver			Add missing transitions {Map,Unconfigure,Unmap} into xtcmonserver.
@@ -13,7 +14,7 @@
 					Changed ClockTime default ctor to not zero memory.
 2009-Jul-10     cpo                     Improvements to acqiris configuration classes.
 2009-Jun-01	weaver	Tag V00-04-00.	Tagged Amedeo's changes to xtc/Sequence.
-2009-Apr-16	weaver			Added pulnix directory and its configuration data type.  
+2009-Apr-16	weaver			Added pulnix directory and its configuration data type.
 					Added out-of-order damage type.
 2009-Apr-10     cpo                     Change Acqiris waveform() to return
                                         int16 instead of uint16.  Add method
@@ -21,7 +22,7 @@
 2009-Mar-31	weaver	Tag V00-03-00.	Interface changes require version change.
 2009-Mar-31	weaver	Tag V00-02-05.	Removed TypeId(unsigned) ctor which ignored versions.  Added TwoDGaussianV1.hh.
 2009-Mar-24     cpo     Tag V00-02-04.  Add xtcreader to new app directory.
-2009-Mar-24     cpo     Tag V00-02-03.  Removed WaveformV1.hh and AcqDataDescV1.* and DataCallback.hh.  
+2009-Mar-24     cpo     Tag V00-02-03.  Removed WaveformV1.hh and AcqDataDescV1.* and DataCallback.hh.
 					Added acqiris bit field locations in DataDescV1.hh.
 2009-Mar-24     cpo     Tag V00-02-01.  Improved acqiris data support.
 2009-Mar-04	weaver	Tag V00-02-00.  Added camera, evr, opal1k data formats.
